# rest_api

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  BACKEND_REQUIREMENTS.md  BACKEND_TODO_TRACKER.md  CLAUDE.md  CLAUDE_USAGE_SETUP.md  Dockerfile  FAVORITES_API_DOCUMENTATION.md  FRONTEND_API_DOCUMENTATION.md  MEMO_API_DOCUMENTATION.md  MOBILE_AUTH.md  MONITORING.md  README.md  deploy.sh  docker-compose.yml  dockerfile  efobasen_enhanced_workflow.json  efobasen_http_response.json  get_tasks.py  manage.py  matriell_leverandor.json  n8n_output_before_restructure.json  nginix.conf  nginx.conf  pyproject.toml  requirements.txt  requirements_dev.txt  requrements.txt  test.json  test_mcp_client.py  update_server.sh
app/: urls.py
app/blog/: admin.py  mcp.py  models.py  permissions.py  serializers.py  tests.py  translation.py  urls.py  views.py
app/chat/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
app/claude_usage/: FRONTEND_API.md  README.md  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
app/components/: admin.py  mcp.py  models.py  serializers.py  urls.py  views.py
app/docker_monitor/: admin.py  mcp.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py  views_system.py
app/memo/: admin.py  apps.py  filters.py  mcp.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
app/tasks/: admin.py  mcp.py  models.py  serializers.py  tests.py  urls.py  views.py
app/todo/: admin.py  apps.py  mcp.py  models.py
desktop_agent/: README.md  docker-agent.service  docker_agent.py  install.sh
jobb/: apps.py  models.py
restAPI/: GEOCODING_GUIDE.md  __init__.py  admin.py  apps.py  clerk.py  consumers.py  mcp.py  mixins.py  models.py  restrictpaths.py  serializers.py  socketio_server.py  tasks.py  tests.py  urls.py  views.py
restAPI/utils/: audit.py  (+13 more)
scripts/: claude_usage_agent.py  lint.sh  run_claude_agent.sh
srv/: asgi.py  base.py  celery.py  dev.py  prod.py  routing.py  settings.py  urls.py  wsgi.py
temp/: BACKEND_REQUIREMENTS.md
templates/: landing.html
(+55 files in other folders)
